new editted html

--- a/index.html
+++ b/index.html
@@ -28,8 +28,25 @@
 
     </nav>
 
-    <!-- <img src="/assets/favicon.ico" alt=""> -->
+    <div class="flex gap-2 items-center justify-center">
+        <div class="p-10  shadow-2xl box">
+            <a href="/au-uniform.html" class="flex h-20  w-20 items-center text-center justify-center">
+                AU UNIFORM
+            </a>
+        </div>
+        <div class="p-10 shadow-2xl box">
+            <a href="/au-pe.html" class="flex h-20  w-20 items-center text-center justify-center">
+                AU P.E
+            </a>
+        </div>
+        <div class="p-10  shadow-2xl box">
+            <a href="/au-tshirt.html" class="flex h-20 w-20 items-center text-center justify-center">
+                AU T-SHIRT
+            </a>
+        </div>
+    </div>
 
+    <footer class="p-10"></footer>
 </body>
 
 
