--- a/information.html
+++ b/information.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Information</title>
     <link rel="stylesheet" href="/css/style.css">
+
 </head>
 
 <body>
@@ -27,6 +28,7 @@
     </nav>
 
     <main>
+
 
         <form action="" class="flex flex-col w-40 p-10">
             <label for="">Name</label>
@@ -54,6 +56,7 @@
         <button>Proceed</button>
     </main>
 
+    <script src="script/script.js"></script>
 
 </body>
 
