--- a/index.html
+++ b/index.html
@@ -39,12 +39,15 @@
                 AU P.E
             </a>
         </div>
-        <div class="p-10  shadow-2xl box">
-            <a href="/au-tshirt.html" class="flex h-20 w-20 items-center text-center justify-center">
+        <div class="p-10  shadow-2xl box radius-2xl">
+            <a href="/au-tshirt.html" class="flex h-20 w-20 flex-col ">
+                <img src="/assets/dress.jpg" alt="" height="150px">
                 AU T-SHIRT
             </a>
         </div>
     </div>
+
+
 
     <footer class="p-10"></footer>
 </body>
