--- a/information.html
+++ b/information.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <nav class="navigation p-10 flex items-center flex-between">
+    <!-- <nav class="navigation p-10 flex items-center flex-between">
 
         <div>
             <a href="/index.html"><span class="text-white text-bold text-2xl">Chief's Merch</span> <img src=""
@@ -44,6 +44,11 @@
                 <option value=""></option>
                 <option value=""></option>
             </select>
+
+            <div>
+                <input type="checkbox">
+                <label for="">Product</label>
+            </div>
         </form>
 
         <div>
@@ -54,7 +59,20 @@
         <p>Please Fill up the information Thank you</p>
 
         <button>Proceed</button>
-    </main>
+    </main> -->
+
+
+
+    <div>
+        <input type="checkbox" value="1200" id="firstItem">
+        <label for="">Uniform</label>
+        <input type="checkbox" value="600" id="secondItem">
+        <label for="">Uniform 2</label>
+        <input type="checkbox" value="700" id="thirdItem">
+        <label for="">Uniform 3</label>
+
+        <p>TOTAL: <span id="total">0</span></p>
+    </div>
 
     <script src="script/script.js"></script>
 
