ADD TO CART & CHECKOUT

--- a/cart.html
+++ b/cart.html
@@ -10,7 +10,16 @@
 <body>
 
     CART
+    <div>
+        <p>DATE: <span id="date"></span> </p>
+        <h1>ITEMS</h1>
+        <div id="itemContainer">
 
+        </div>
+        <p>TOTAL: <span id="total"></span></p>
+        <button style="margin-top: 20px" onclick="checkout()">CHECKOUT</button>
+    </div>
+    <script src="script/script.js"></script>
 </body>
 
 </html>
