--- a/order.html
+++ b/order.html
@@ -29,7 +29,12 @@
     </nav>
     <div class="p-10">
         <p>DRESS</p>
-        <button id="add-to-cart" onclick="addItemsToCart()">Add to cart</button>
+        <button id="add-to-cart" onclick="addItemsToCart({name: 'dress', price: 150})">Add to cart</button>
+    </div>
+
+    <div class="p-10">
+        <p>TSHIRT</p>
+        <button id="add-to-cart" onclick="addItemsToCart({name: 'tshirt', price: 250})">Add to cart</button>
     </div>
     <script src="script/script.js"></script>
 </body>
